Dark mode fix for tabulator displayed in the layer view;

--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -311,7 +311,8 @@ html.dark-mode {
   /* begin tabview */
 
   .tabview,
-  .location {
+  .location,
+  .dataview-target {
     .panel {
       background-color: var(--dm-color-dark-neutral);
 
